feat: complete front end rework feat: feat manual search episodes feat: delete downloaded episodes feat: episode modals for change tracking status, delete episode and manual search feat: new qbittorrent endpoint to add episode torrent feat: add folder utils with the symlinks, folders and files managers feat: add toasts on frontend feat: add new websocket events for episode tracking updates
